@@ -2,6 +2,7 @@ Math::Big:
  * bernoulli() for $n > 20
  * tan() (depends on bernoulli)
  * more tests for cosh(), sinh(), tan() and all the others
+ * speed up trigonometric functions (by using $CALC directly?)
 
 Please send me test-reports, your experiences with this and your ideas - I love
 to hear about my work!
