@@ -34,6 +34,14 @@ Math::Big:
  * arctan(), tan(), sin(), cos() etc are now about 10% faster
  * arcsin($x) were $x != 0 was broken
 
+2005-01-02 1.11 Tels 177 tests 
+ * streamlined euler()
+ * @k = hailstone() is about 3..4 times faster
+ * $k = scalar hailstone() is about 6..7 times faster
+ * primes() is about 1.5 times faster
+ * fix documentation for primes() (Thanx Es Allen Smith!)
+ * add to_base($n, $base, [$alphabet]) (Thanx Tilghman Lesher!)
+
 ############################################################################## 
 Math::Big::Factors:
 
